<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/thirty"
        android:text="@string/my_balances"
        android:textColor="@color/text_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCurrencies"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@id/tvBalance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvExchange" />

    <TextView
        android:id="@+id/tvExchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/twenty"
        android:text="@string/currency_exchange"
        android:textColor="@color/text_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvCurrencies" />

    <ImageView
        android:id="@+id/ivSell"
        android:layout_width="@dimen/forty"
        android:layout_height="@dimen/forty"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/fourteen"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExchange" />

    <TextView
        android:id="@+id/tvSell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twentyFour"
        android:layout_marginTop="@dimen/twentyFour"
        android:text="@string/sell"
        app:layout_constraintStart_toEndOf="@+id/ivSell"
        app:layout_constraintTop_toBottomOf="@+id/tvExchange" />

    <EditText
        android:id="@+id/etSell"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/sixty"
        android:layout_marginStart="@dimen/eightyFour"
        android:layout_marginTop="@dimen/two"
        android:gravity="center"
        android:hint="@string/input"
        android:inputType="number"
        android:maxWidth="@dimen/eightyFour"
        android:minWidth="@dimen/eightyFour"
        app:layout_constraintStart_toStartOf="@+id/tvSell"
        app:layout_constraintTop_toBottomOf="@+id/tvExchange" />

    <TextView
        android:id="@+id/tvCurrencySell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="24dp"
        android:drawablePadding="10dp"
        android:text="@string/sell"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/spSixteen"
        app:drawableEndCompat="@drawable/baseline_arrow_drop_down_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toEndOf="@+id/etSell"
        app:layout_constraintTop_toBottomOf="@+id/tvExchange" />

    <View
        android:id="@+id/breakLineOne"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one"
        android:layout_marginStart="@dimen/eightyFour"
        android:layout_marginTop="@dimen/sixteen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivSell" />

    <ImageView
        android:id="@+id/ivReceive"
        android:layout_width="@dimen/forty"
        android:layout_height="@dimen/forty"
        android:layout_marginStart="@dimen/twenty"
        android:layout_marginTop="@dimen/twenty"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakLineOne" />

    <TextView
        android:id="@+id/tvReceive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twentyFour"
        android:layout_marginTop="@dimen/thirty"
        android:text="@string/receive"
        app:layout_constraintStart_toEndOf="@+id/ivReceive"
        app:layout_constraintTop_toBottomOf="@+id/breakLineOne" />

    <TextView
        android:id="@+id/etReceive"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/sixty"
        android:layout_marginStart="@dimen/eightyFour"
        android:layout_marginTop="@dimen/ten"
        android:gravity="center"
        android:hint="@string/output"
        android:maxWidth="@dimen/eightyFour"
        android:minWidth="@dimen/eightyFour"
        android:textColor="@color/black"
        android:textSize="@dimen/spSixteen"
        app:layout_constraintStart_toStartOf="@+id/tvReceive"
        app:layout_constraintTop_toBottomOf="@+id/breakLineOne" />

    <TextView
        android:id="@+id/tvCurrencyReceive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="@dimen/twenty"
        android:drawablePadding="10dp"
        android:text="@string/receive"
        android:textColor="@color/cardview_dark_background"
        android:textSize="@dimen/spSixteen"
        app:drawableEndCompat="@drawable/baseline_arrow_drop_down_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toEndOf="@+id/etReceive"
        app:layout_constraintTop_toBottomOf="@+id/breakLineOne" />

    <View
        android:id="@+id/breakLineTwo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one"
        android:layout_marginStart="@dimen/eightyFour"
        android:layout_marginTop="@dimen/sixteen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivReceive" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fifty"
        android:layout_marginTop="@dimen/sixteen"
        android:layout_marginEnd="@dimen/fifty"
        android:background="@drawable/rounded_btn"
        android:letterSpacing="0.1"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pbLoader" />

    <ProgressBar
        android:id="@+id/pbLoader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/twentyFour"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breakLineTwo" />
</androidx.constraintlayout.widget.ConstraintLayout>